first movies_recommendation

--- a/index.html
+++ b/index.html
@@ -30,6 +30,30 @@
         </div>
     </div>
 
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>CINE<span>PRO</span></h3>
+                <p>Your ultimate destination for movie discovery.</p>
+            </div>
+            <div class="footer-section">
+                <h4>Contact Me</h4>
+                <p><i class="fas fa-envelope"></i> rk6854797@gmail.com</p>
+            </div>
+            <div class="footer-section">
+                <h4>Follow & Subscribe</h4>
+                <div class="social-links">
+                    <a href="https://www.instagram.com/anima_tion012?igsh=cjFuaHVwNjloZzV4" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/@RogueNado" target="_blank"><i class="fab fa-youtube"></i></a>
+                </div>
+                <p class="subscribe-text">Don't forget to <strong>Subscribe my channel!</strong></p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            &copy; 2026 CinePro | Designed by Rishav Kumar
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
