Add Google AdSense meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CinePro | Premium Movie Explorer</title>
 
+    <meta name="google-adsense-account" content="ca-pub-4390515846743710">
+    
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4390515846743710"
      crossorigin="anonymous"></script>
 
