--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CinePro | Premium Movie Explorer</title>
-
+     <link rel="icon" type="image/jpeg" href="rogue.jpg">
     <meta name="google-adsense-account" content="ca-pub-4390515846743710">
     
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4390515846743710"
