Add AMP auto ads for AdSense integration

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 </head>
 <body>
 
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-4390515846743710">
+</amp-auto-ads>
+
     <nav class="navbar">
         <div class="logo">CINE<span>PRO</span></div>
         <form id="searchForm" class="search-box">
