--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
 </head>
 <body>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4390515846743710"
+     crossorigin="anonymous"></script>
+<!-- Top banner -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4390515846743710"
+     data-ad-slot="8088682776"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+    
     <amp-auto-ads type="adsense"
         data-ad-client="ca-pub-4390515846743710">
 </amp-auto-ads>
